==> 411568/MTB-Telemetry-System/DISPLAY/ST7565.c <==
#include "ST7565.h"
#define ST7565_STARTBYTES 0
#define enablePartialUpdate

void ST7565_st7565_init(void)
{
	// toggle RST low to reset; CS low so it'll listen to us
	HAL_GPIO_WritePin(CS_port, CS_pin, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(RST_port, RST_pin, GPIO_PIN_RESET);
	HAL_Delay(500);
	HAL_GPIO_WritePin(RST_port, RST_pin, GPIO_PIN_SET);

	// LCD bias select
	ST7565_st7565_command(CMD_SET_BIAS_7);
	// ADC select
	ST7565_st7565_command(CMD_SET_ADC_NORMAL);
	// SHL select
	ST7565_st7565_command(CMD_SET_COM_NORMAL);
	// Initial display line
	ST7565_st7565_command(CMD_SET_DISP_START_LINE);

	// turn on voltage converter (VC=1, VR=0, VF=0)
	ST7565_st7565_command(CMD_SET_POWER_CONTROL | 0x4);
	// wait for 50% rising
	HAL_Delay(50);

	// turn on voltage regulator (VC=1, VR=1, VF=0)
	ST7565_st7565_command(CMD_SET_POWER_CONTROL | 0x6);
	// wait >=50ms
	HAL_Delay(50);

	// turn on voltage follower (VC=1, VR=1, VF=1)
	ST7565_st7565_command(CMD_SET_POWER_CONTROL | 0x7);
	// wait
	HAL_Delay(10);

	// set lcd operating voltage (regulator resistor, ref voltage resistor)
	ST7565_st7565_command(CMD_SET_RESISTOR_RATIO | 0x6);

	// set up a bounding box for screen updates
	ST7565_updateBoundingBox(0, 0, LCDWIDTH - 1, LCDHEIGHT - 1);
}

inline void ST7565_spiwrite(uint8_t c)
{
	HAL_SPI_Transmit(&hspi1, (uint8_t *)&c, sizeof(uint8_t), 1000);
	while(HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY); //wait for the transmittion to end
}

	void ST7565_st7565_command(uint8_t c)
	{
		HAL_GPIO_WritePin(RS_port, RS_pin, GPIO_PIN_RESET);
		ST7565_spiwrite(c);
	}

	void ST7565_st7565_data(uint8_t c)
	{
		HAL_GPIO_WritePin(RS_port, RS_pin, GPIO_PIN_SET);
		ST7565_spiwrite(c);
	}
