==> mberntsen/STM32-Libraries/ST7565/src/ST7565.c <==
#include <stdlib.h>
#include <stdint.h>
#include "stm32f10x.h"
#include "ST7565.h"
#include <string.h>
#define ST7565_STARTBYTES 0
#define enablePartialUpdate

void ST7565_st7565_init(void) {
  // set pin directions
//  pinMode(sid, OUTPUT);
//  pinMode(sclk, OUTPUT);
//  pinMode(a0, OUTPUT);
//  pinMode(rst, OUTPUT);
//  pinMode(cs, OUTPUT);

  // toggle RST low to reset; CS low so it'll listen to us
//  if (cs > 0)
//    digitalWrite(cs, LOW);
  GPIO_ResetBits(GPIOB, GPIO_Pin_9);

//  digitalWrite(rst, LOW);
  GPIO_ResetBits(GPIOB, GPIO_Pin_10);
  DelaymS(500);
//  digitalWrite(rst, HIGH);
  GPIO_SetBits(GPIOB, GPIO_Pin_10);

  // LCD bias select
  ST7565_st7565_command(CMD_SET_BIAS_7);
  // ADC select
  ST7565_st7565_command(CMD_SET_ADC_NORMAL);
  // SHL select
  ST7565_st7565_command(CMD_SET_COM_NORMAL);
  // Initial display line
  ST7565_st7565_command(CMD_SET_DISP_START_LINE);

  // turn on voltage converter (VC=1, VR=0, VF=0)
  ST7565_st7565_command(CMD_SET_POWER_CONTROL | 0x4);
  // wait for 50% rising
  DelaymS(50);

  // turn on voltage regulator (VC=1, VR=1, VF=0)
  ST7565_st7565_command(CMD_SET_POWER_CONTROL | 0x6);
  // wait >=50ms
  DelaymS(50);

  // turn on voltage follower (VC=1, VR=1, VF=1)
  ST7565_st7565_command(CMD_SET_POWER_CONTROL | 0x7);
  // wait
  DelaymS(10);

  // set lcd operating voltage (regulator resistor, ref voltage resistor)
  ST7565_st7565_command(CMD_SET_RESISTOR_RATIO | 0x6);

  // initial display line
  // set page address
  // set column address
  // write display data

  // set up a bounding box for screen updates

  ST7565_updateBoundingBox(0, 0, LCDWIDTH-1, LCDHEIGHT-1);
}

inline void ST7565_spiwrite(uint8_t c) {
  //shiftOut(sid, sclk, MSBFIRST, c);
  while (SPI_GetFlagStatus(SPI2, SPI_FLAG_TXE) == RESET);
  SPI_SendData(SPI2, c);
}

void ST7565_st7565_command(uint8_t c) {
//  digitalWrite(a0, LOW);
  GPIO_ResetBits(GPIOB, GPIO_Pin_11);

  ST7565_spiwrite(c);
}

void ST7565_st7565_data(uint8_t c) {
//  digitalWrite(a0, HIGH);
  GPIO_SetBits(GPIOB, GPIO_Pin_11);

  ST7565_spiwrite(c);
}
